--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "lottie-web": "^5.12.2",
     "next": "14.0.3",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
