--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
