--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
