--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prod": "npm run build && pm2 start pm2.config.js",
     "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "lottie-web": "^5.12.2",
     "next": "14.0.3",
+    "primereact": "^10.2.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
